David/add foundry to GitHub action (#45)
* feat: ensure abi-gen gets ran before a build in sdk

 - David

* fix: change any -> unknown for linting happiness

 - David

* feat: split type checking to its own run

Additionally changes the base linting job to use the separate type check

 - David

* feat: ensure foundry is installed in base

Also added `yarn typecheck` split to operator

 - David

* chore: split out typecheck command for other projects

 - David

* chore: fix linting errors

 - David

* chore: reorder standard scripts to lint, build:sdk, typecheck, build

Includes rename of `abi-gen` => `build:abi`
Includes rename of `typechain` => `build:typechain`

 - David

* fix: sdk must be built before it is typechecked

 - David

* chore: fix linting errors on frontend

 - David

* fix: no need to build before typecheck just abi and typechain

 - David

* fix: relayer requires prisma generated files

 - David

* fix: satisfy module type checking error in test stub file

 - David

* fix: remove typo

 - David

* Changing around structure to avoid having to do whole build, and only isolating to typechecking

* Added diff in contracts for linter

* Did prettier to circuits, removed circuit linting from test. Formatted yml files to 2 space tab in prettierrc

* smol changes

Co-authored-by: puma314 <uma.roy.us@gmail.com>
GitOrigin-RevId: b66f70974ab86c96b80d6bd4d14187961af8b9c0

--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -1,37 +1,37 @@
-name: Tests
+name: Contracts Linting and Testing
 
 on: [pull_request]
 
 jobs:
-    tests:
-      runs-on: ubuntu-latest
-        steps:
-          - uses: actions/checkout@v2
+  tests:
+    runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
 
-          - name: Install Foundry
-            uses: onbjerg/foundry-toolchain@v1
-            with:
-                version: nightly
+        - name: Install Foundry
+          uses: onbjerg/foundry-toolchain@v1
+          with:
+              version: nightly
 
-          - name: Check formatting
-            working-directory: .
-            run: forge fmt --check src/
+        - name: Check formatting
+          working-directory: .
+          run: forge fmt --check src/
 
-          - name: Install dependencies
-            working-directory: .
-            run: forge install
+        - name: Install dependencies
+          working-directory: .
+          run: forge install
 
-          - name: Check contract sizes
-            working-directory: .
-            run: forge build --sizes
+        - name: Check contract sizes
+          working-directory: .
+          run: forge build --sizes
 
-          # - name: Check gas snapshots
-          #   working-directory: .
-          #   run: forge snapshot --check
+        # - name: Check gas snapshots
+        #   working-directory: .
+        #   run: forge snapshot --check
 
-          - name: Run tests
-            working-directory: .
-            run: forge test --no-match-test testExecuteMessageFromLog
-            env:
-              # Only fuzz intensely if we're running this action on a push to main or for a PR going into main:
-              FOUNDRY_PROFILE: ${{ (github.ref == 'refs/heads/main' || github.base_ref == 'main') && 'intense' }}
+        - name: Run tests
+          working-directory: .
+          run: forge test --no-match-test testExecuteMessageFromLog
+          env:
+            # Only fuzz intensely if we're running this action on a push to main or for a PR going into main:
+            FOUNDRY_PROFILE: ${{ (github.ref == 'refs/heads/main' || github.base_ref == 'main') && 'intense' }}
