AUDIT COMMIT: TOB contract audit branch (#84)
* Removed ShortSentMessage

* Changed interfaces a lot and things compile still

* Moved around libraries

* Removed pragma abicoderv2, uneeded

* Moved around the file structure

* Added mock

* Added bridge test with the newly created test harness

* Formatting

* Moved around stuff

* Moved counter from test to examples

* Moved around more imports to be named

* Fixed spelling of receive and also fixed uniswap test to work

* Changed around function orders to follow convention

* Moved around structure more.

* Added tests for TargetAMBLog

* Added testUnimplemented so CI would pass

* Fixed yarn.lock

* Removed forge fmt from the pre-commit hooks because it doesn't work since it doesn't run in contracts/ folder so it doesn't pick up on the config in the foundry.toml

* Formatted src dir

* Removed warnings

* No compiler warnings anymore and fixed all formatting in all folders

* Updated .gitignore to exclude coverage

* Changed yarn.lock to be main

GitOrigin-RevId: ddfa9627b14e5eeefae908e8c2aeefe03718f1cc

--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Run tests
         working-directory: .
-        run: forge test --no-match-test testExecuteMessageFromLog
+        run: forge test --no-match-test testUnimplemented
         env:
           # Only fuzz intensely if we're running this action on a push to main or for a PR going into main:
           FOUNDRY_PROFILE: ${{ (github.ref == 'refs/heads/main' || github.base_ref == 'main') && 'intense' }}
