--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,9 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 solc_version = "0.8.14"
+verbosity = 3
+src = 'examples'
+fs_permissions = [{ access = "read-write", path = "./"}]
 
 # https://book.getfoundry.sh/reference/config/formatter#line_length
 [fmt]
