(test+chore) added more tests for TargetAMB and cleaned up naming and comments (#79)
* Fixed CI

* Added tests for close together slots

* PR comments

* Added forge fmt

* Modified yarn.lock

* Changed CI and also formatted src

* Removed failing uniswap test

* Fixed typecheck

* Getting mainnet rpc uniswap tow ork

* CI should pas

GitOrigin-RevId: 42b4bab15decd07aaeb3ba4c44fed23598334630

--- a/foundry.toml
+++ b/foundry.toml
@@ -12,5 +12,5 @@ fs_permissions = [{ access = "read-write", path = "./"}]
 line_length = 100
 tab_width = 4
 func_attrs_with_params_multiline = true
-
+ignore = ["lib/**"]
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
