--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   lint-and-test:
+    environment: testing
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -18,7 +19,7 @@ jobs:
 
       - name: Check formatting
         working-directory: .
-        run: forge fmt --check src/
+        run: forge fmt --check src/ test/ examples/
 
       - name: Install dependencies
         working-directory: .
@@ -34,7 +35,7 @@ jobs:
 
       - name: Run tests
         working-directory: .
-        run: forge test --no-match-test testUnimplemented
+        run: MAINNET_RPC_URL=${{ secrets.MAINNET_RPC_URL }} forge test --no-match-test testUnimplemented
         env:
           # Only fuzz intensely if we're running this action on a push to main or for a PR going into main:
           FOUNDRY_PROFILE: ${{ (github.ref == 'refs/heads/main' || github.base_ref == 'main') && 'intense' }}
