Use optimism bedrock for stroage and event proofs instead of curve (#78)
* Added optimism dependency

I think I got some stuff to work with the optimism libraries

All tests pass. Modified optimism library a little bit

Changed to get with function overloading

* Moved files

* Added new stuff

* Added changes to work with optimism library

* Formatting

* Removed need for state proof verifier

* Migrate to bedrock contracts

* Apply forge fmt

* forge fmt other directories as well

* Update optimism-bedrock-contracts to include new commits

* Remove old optimism libraries

* Fix Uma's comments + migrate StateProofHelper -> MerklePatriciaTrie with StorageProof and EventProof

* Forge fmt on src

* Fixed comments

* Remote empty line

---------

Co-authored-by: jtguibas <jtguibas@gmail.com>
GitOrigin-RevId: 646c98758223e2881539936a13555ba3791772ab

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,7 @@
 	path = lib/v3-core
 	url = https://github.com/succinctlabs/v3-core
 	branch = main
+[submodule "lib/optimism-bedrock-contracts"]
+	path = lib/optimism-bedrock-contracts
+	url = https://github.com/succinctlabs/optimism-bedrock-contracts
+	branch = main
