--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,10 @@
 	path = lib/v3-core
 	url = https://github.com/succinctlabs/v3-core
 	branch = main
+[submodule "lib/openzeppelin-contracts-upgradeable"]
+	path = lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
+	branch = v4.8.1
 [submodule "lib/optimism-bedrock-contracts"]
 	path = lib/optimism-bedrock-contracts
 	url = https://github.com/succinctlabs/optimism-bedrock-contracts
