--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -6,7 +6,7 @@ on:
       - '.github/workflows/contracts.yml'
   push:
     branches:
-      - master
+      - main
     paths:
       - '**'
       - '.github/workflows/contracts.yml'
