add GH action for solhint and contract test coverage (#179)
GitOrigin-RevId: 7bf9ca45966334158daa7a6f2a4a97792fb60288

--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -35,9 +35,17 @@ jobs:
         working-directory: .
         run: forge build --sizes
 
+      - name: Run Solhint
+        working-directory: .
+        run: npx solhint 'src/**/*.sol' 'test/**/*.sol' 'examples/**/*.sol' 'script/**/*.sol' --config .solhint.json
+
       # - name: Check gas snapshots
       #   working-directory: .
       #   run: forge snapshot --check
+
+      - name: Check test coverage
+        working-directory: .
+        run: MAINNET_RPC_URL=${{ secrets.MAINNET_RPC_URL }} forge coverage
 
       - name: Run tests
         working-directory: .
