add GH action for slither static analysis (#184)
GitOrigin-RevId: 750c0b2dea3eef9513f0ea2ba6eecc4b818ba500

--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -16,7 +16,7 @@ jobs:
     environment: testing
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Install Foundry
         uses: onbjerg/foundry-toolchain@v1
@@ -33,7 +33,16 @@ jobs:
 
       - name: Check contract sizes
         working-directory: .
-        run: forge build --sizes
+        run: forge build --sizes --build-info
+
+      - name: Run Slither
+        uses: crytic/slither-action@main
+        id: slither
+        with:
+          target: ''
+          slither-config: 'slither.config.json'
+          fail-on: none
+          ignore-compile: true
 
       - name: Run Solhint
         working-directory: .
