Add redis nonce management (#183)
* Started adding redis client

* Add redis client

* Moved to misc

GitOrigin-RevId: 61e3eb1889dbe77a8c9cbde8cf83bdd7d67b7107

--- a/foundry.toml
+++ b/foundry.toml
@@ -13,3 +13,11 @@ tab_width = 4
 func_attrs_with_params_multiline = true
 ignore = ["lib/**"]
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+
+[profile.misc]
+src = 'misc'
+out = 'out'
+libs = ['lib']
+solc_version = "0.8.16"
+verbosity = 3
+fs_permissions = [{ access = "read-write", path = "./"}]
