Gnosis Validator with PubSub system (#274)
GitOrigin-RevId: 4c974ab30fee58a36d383ad2c8b05464f634a0a3

--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -35,6 +35,7 @@ jobs:
         working-directory: .
         run: forge build --sizes --build-info
 
+      # TODO most likely stuck on unchecked external calls @ src/oracle/TelepathyOracle.sol:94
       # - name: Run Slither
       #   uses: crytic/slither-action@main
       #   id: slither
