Refactor sdk so that it can be built on vercel (#283)
* test

* remove copy pasted code

* turbo on vercel

* sdk graph changes

* fix turbo

* commit abi

* Add turbo:vercel

* force update

* fix turbo

* remove graphclient from functions

* cleanup unnecessary abi

* Add required ABI

* Add vercel.json

* Remove *.abi.json

* Add ABI

* fixes

* force vercel build

* abi -> out

* test edited abi

* Add github actions check

* Remove test

* PR feedback

* force vercel update

* Update readme

* fix typechain imports

GitOrigin-RevId: fbc571d7c298aee6f81ba2b5dc8138ccbb4e42bf

--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -35,6 +35,16 @@ jobs:
         working-directory: .
         run: forge build --sizes --build-info
 
+      # Uses https://github.com/tj-actions/verify-changed-files action
+      # to get any uncommitted changes from previous step
+      - name: Get changes after last step
+        id: abi-changes
+        uses: tj-actions/verify-changed-files@v14
+
+      - name: Make sure ABI hasn't changed
+        if: steps.abi-changes.outputs.files_changed == 'true'
+        run: exit 1
+
       # TODO most likely stuck on unchecked external calls @ src/oracle/TelepathyOracle.sol:94
       # - name: Run Slither
       #   uses: crytic/slither-action@main
