--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
-out/
-abi/
 broadcast/
 cache/
 logs/
 lcov.info
 *foundryScriptOutput.json
+
+out/*
+out/**/*.abi.json
+!out/LightClient.sol/
+!out/LightClientMock.sol/
+!out/SourceAMB.sol/
+!out/TargetAMB.sol/
+!out/DrillLightClient.sol/
+!out/DrillTelepathyRouter.sol/
+!out/Guardian.sol/
+!out/Timelock.sol/
+!out/TelepathyRouter.sol/
+!out/TelepathyPubSub.sol/
+!out/TelepathyPublisher.sol/
+!out/TelepathySubscriber.sol/
+!out/TelepathyValidator.sol/
