--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "lint": "forge fmt --check src test script examples",
         "test": "forge test",
-        "turbo:build": "FOUNDRY_IGNORED_ERROR_CODES='[5740,1878]' forge build --extra-output-files abi --out abi",
+        "turbo:build": "FOUNDRY_IGNORED_ERROR_CODES='[5740,1878]' forge build",
         "turbo:lint": "forge fmt --check src test script examples",
         "turbo:test": "forge test"
     }
