--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "scripts": {
         "lint": "forge fmt --check src test script examples",
         "test": "forge test",
-        "turbo:build": "FOUNDRY_IGNORED_ERROR_CODES='[5740,1878]' forge build",
-        "turbo:lint": "forge fmt --check src test script examples",
-        "turbo:test": "forge test"
+        "build": "FOUNDRY_IGNORED_ERROR_CODES='[5740,1878]' forge build"
     }
 }
