fix turbo ci (#302)
* fix turbo ci

* Fix github action trigger

* test depends on build

* use forge build --force

* fix vercel

GitOrigin-RevId: 13d885bf303018332f29e1f4155516e7a5754679

--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "scripts": {
         "lint": "forge fmt --check src test script examples",
         "test": "forge test",
-        "build": "FOUNDRY_IGNORED_ERROR_CODES='[5740,1878]' forge build"
+        "build": "FOUNDRY_IGNORED_ERROR_CODES='[5740,1878]' forge build --force"
     }
 }
