Push ABI only instead of full foundry artifacts (#307)
* ABI instead of full artifacts

* Generate ABI only

* Re-add ABI CI check

* rename

GitOrigin-RevId: adb453b9fd28a68b0c99212870e73cf80f8c9479

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,21 @@
-abi/
+out/
 broadcast/
 cache/
 logs/
 lcov.info
 *foundryScriptOutput.json
 
-out/*
-out/**/*.abi.json
-!out/LightClient.sol/
-!out/LightClientMock.sol/
-!out/SourceAMB.sol/
-!out/TargetAMB.sol/
-!out/DrillLightClient.sol/
-!out/DrillTelepathyRouter.sol/
-!out/Guardian.sol/
-!out/Timelock.sol/
-!out/TelepathyRouter.sol/
-!out/TelepathyPubSub.sol/
-!out/TelepathyPublisher.sol/
-!out/TelepathySubscriber.sol/
-!out/TelepathyValidator.sol/
+abi/*
+!abi/LightClient.json
+!abi/LightClientMock.json
+!abi/SourceAMB.json
+!abi/TargetAMB.json
+!abi/DrillLightClient.json
+!abi/DrillTelepathyRouter.json
+!abi/Guardian.json
+!abi/Timelock.json
+!abi/TelepathyRouter.json
+!abi/TelepathyPubSub.json
+!abi/TelepathyPublisher.json
+!abi/TelepathySubscriber.json
+!abi/TelepathyValidator.json
