--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "scripts": {
         "lint": "forge fmt --check src test script examples",
         "test": "forge test",
-        "build": "FOUNDRY_IGNORED_ERROR_CODES='[5740,1878]' forge build --force"
+        "build": "./build_with_abi.sh",
+        "dev": "FOUNDRY_IGNORED_ERROR_CODES='[5740,1878]' forge build"
     }
 }
