Telepathy <> EigenLayer prototype (#355)
GitOrigin-RevId: 8b42dd9c27a567105c82b66e627c7efb1e58dfb4

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 	path = contracts-v2/lib/optimism-bedrock-contracts
 	url = https://github.com/succinctlabs/optimism-bedrock-contracts
 	branch = main
+[submodule "contracts-v2/lib/eigenlayer-contracts"]
+	path = contracts-v2/lib/eigenlayer-contracts
+	url = https://github.com/succinctlabs/eigenlayer-contracts
