--- a/foundry.toml
+++ b/foundry.toml
@@ -1,5 +1,21 @@
 [profile.default]
-src = 'examples'
+src = 'src'
+out = 'out'
+libs = ['lib']
+solc_version = "0.8.16"
+verbosity = 3
+fs_permissions = [{ access = "read-write", path = "./"}]
+
+[profile.external]
+src = 'external'
+out = 'out'
+libs = ['lib']
+solc_version = "0.8.16"
+verbosity = 3
+fs_permissions = [{ access = "read-write", path = "./"}]
+
+[profile.misc]
+src = 'misc'
 out = 'out'
 libs = ['lib']
 solc_version = "0.8.16"
@@ -12,12 +28,5 @@ line_length = 100
 tab_width = 4
 func_attrs_with_params_multiline = true
 ignore = ["lib/**"]
-# See more config options https://github.com/foundry-rs/foundry/tree/master/config
 
-[profile.misc]
-src = 'misc'
-out = 'out'
-libs = ['lib']
-solc_version = "0.8.16"
-verbosity = 3
-fs_permissions = [{ access = "read-write", path = "./"}]
+# See more config options https://github.com/foundry-rs/foundry/tree/master/config
