Add hashi API (#394)
* Add hashi api

* Fix build

* fix

* Fix build

GitOrigin-RevId: 915c35279b0619afbbd65525318ee0f5e6296409

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ abi/*
 !abi/TelepathyPublisher.json
 !abi/TelepathySubscriber.json
 !abi/TelepathyValidator.json
+!abi/EigenLayerBeaconOracle.json
+!abi/EigenLayerBeaconOracleProxy.json
