add scripts for V2 deployment (#443)
GitOrigin-RevId: 10ffedab04d12c3a1cc30e293b0da5df22774739

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,19 @@
-MAINNET_RPC_URL=
+PRIVATE_KEY=
+CREATE2_SALT=
+TIMELOCK=
+GUARDIAN=
+SOURCE_CHAIN_IDS=
+
+RPC_1=
+RPC_5=
+RPC_137=
+RPC_420=
+RPC_42163=
+RPC_84531=
+
+ETHERSCAN_API_KEY_1=
+ETHERSCAN_API_KEY_5=
+ETHERSCAN_API_KEY_137=
+ETHERSCAN_API_KEY_420=
+ETHERSCAN_API_KEY_42163=
+ETHERSCAN_API_KEY_84531=
