add FeeVault handling during send (#451)
GitOrigin-RevId: 7eb966dfead919d03894c25b92a48a21c6337192

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,7 @@
 	path = lib/optimism-bedrock-contracts
 	url = https://github.com/succinctlabs/optimism-bedrock-contracts
 	branch = main
+[submodule "lib/telepathy-v2"]
+	path = lib/telepathy-v2
+	url = https://github.com/succinctlabs/telepathy-v2
+	branch = main
