add contract upgrades from multisig (#457)
GitOrigin-RevId: 7fb41524e00cb7728e5ac4bcbb328b48bcd140d8

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
 PRIVATE_KEY=
+WALLET_TYPE=PRIVATE_KEY # PRIVATE_KEY | LEDGER
+MNEMONIC_INDEX=0 # If WALLET_TYPE is LEDGER, this is the index of the account to use
 CREATE2_SALT=
-TIMELOCK=
-GUARDIAN=
 SOURCE_CHAIN_IDS=
+EOA_UPGRADE=
+
+# For Guardian and Timelock deployment
+GUARDIAN_OWNERS=
+MINIMUM_DELAY=
 
 RPC_1=
 RPC_5=
