fix: rename state root to block root and block number to timestamp in eigenlayer event (#464)
* fix abi

* final changes

* final changes

GitOrigin-RevId: 375f035c3892375debff8cdc630cb81bc6abe14e

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "lint": "forge fmt --check src test script examples",
         "test": "forge test",
-        "build": "./build_with_abi.sh",
+        "build": "bash build_with_abi.sh",
         "dev": "FOUNDRY_IGNORED_ERROR_CODES='[5740,1878]' forge build"
     }
 }
